--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
    background-color:#f4f1de;
      
    }
-   
+
 header {
 width: 1000px ;
 height: 100px ;
@@ -34,3 +34,7 @@ color: #ffffff;
 margin: 10px 10px 20px 10px;
 padding: 10px;
 }
+
+#bigimage img {
+   width: 900px;
+ }
