--- a/style.css
+++ b/style.css
@@ -35,6 +35,19 @@ margin: 10px 10px 20px 10px;
 padding: 10px;
 }
 
+nav {
+   width: 240px;
+   height: 380px; 
+   font-family: Bitter;
+   font-weight: 600;
+   Font-Weight: 500;
+   Font-size: p 15pt;
+   Background-color: #658B6F;
+   Color: #ffffff;
+   Margin: 20px 10px 20px 10px; 
+   Padding: 10px; 
+}
+
 #bigimage img {
    width: 1000px;
    margin: 20px 10px 20px 10px;
