--- a/style.css
+++ b/style.css
@@ -42,10 +42,10 @@ nav {
    font-weight: 600;
    Font-Weight: 500;
    Font-size: p 15pt;
-   Background-color: #658B6F;
-   Color: #ffffff;
-   Margin: 20px 10px 20px 10px; 
-   Padding: 10px; 
+   background-color: #658B6F;
+   color: #ffffff;
+   margin: 20px 10px 20px 10px; 
+   padding: 10px; 
 }
 
 #bigimage img {
