--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -65,3 +65,14 @@ color: #ffffff;
 margin: 20px 10px 20px 10px;
 padding: 10px;
  }
+
+ .
+ Width: 1000px; 
+Height: 75px; 
+Font-type: Bitter 
+Font-Weight: 600; 
+Font-size: p 17pt; 
+Background-color: #24565d; 
+Color: #ffffff; 
+Margin: 20px 10px 20px 10px; 
+Padding: 10px; 
