--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -66,7 +66,7 @@ margin: 20px 10px 20px 10px;
 padding: 10px;
  }
 
- .
+ .koptitel {
  Width: 1000px; 
 Height: 75px; 
 Font-type: Bitter 
@@ -76,3 +76,4 @@ Background-color: #24565d;
 Color: #ffffff; 
 Margin: 20px 10px 20px 10px; 
 Padding: 10px; 
+}
