--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -77,3 +77,15 @@ color: #ffffff;
 margin: 20px 10px 20px 10px; 
 padding: 10px; 
 }
+
+.kop_samenvatting {
+width: 1000px; 
+height: 190px; 
+font-family: Bitter;
+font-weight: 500; 
+font-size: 17pt; 
+background-color: #3e9194; 
+color: #ffffff; 
+margin: 20px 10px 20px 10px; 
+padding: 10px;
+}
