--- a/style.css
+++ b/style.css
@@ -89,3 +89,12 @@ color: #ffffff;
 margin: 20px 10px 20px 10px; 
 padding: 10px;
 }
+
+.plaatjes {
+   width: 240px; 
+   height: 125px; 
+   margin: 20px 10px 20px 10px; 
+   padding: 10px;
+   float: right;
+   }
+   
