--- a/style.css
+++ b/style.css
@@ -97,4 +97,12 @@ padding: 10px;
    padding: 10px;
    float: right;
    }
+
+   .plaatjes {
+      width: 240px; 
+      height: 125px; 
+      margin: 20px 10px 20px 10px; 
+      padding: 10px;
+      float: right;
+      } 
    
