--- a/style.css
+++ b/style.css
@@ -103,6 +103,6 @@ padding: 10px;
       height: 125px; 
       margin: 20px 10px 20px 10px; 
       padding: 10px;
-      float: right;
+      float: left;
       } 
    
