--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ margin: 10px 10px 20px 10px;
 padding: 10px;
 }
 
-nav {
+.inhoudsopgave {
    width: 240px;
    height: 380px; 
    font-family: Bitter;
@@ -98,11 +98,5 @@ padding: 10px;
    float: right;
    }
 
-   .plaatjes {
-      width: 240px; 
-      height: 125px; 
-      margin: 20px 10px 20px 10px; 
-      padding: 10px;
-      float: left;
-      } 
+
    
