--- a/style.css
+++ b/style.css
@@ -90,9 +90,8 @@ margin: 20px 10px 20px 10px;
 padding: 10px;
 }
 
-.plaatjes {
-   width: 240px; 
-
+.plaatjes_klein {
+   width: 24px; 
    }
 
 .deelkopje_nav {
