--- a/style.css
+++ b/style.css
@@ -91,8 +91,17 @@ padding: 10px;
 }
 
 .plaatjes_klein img {
-   width: 24px; 
+   width: 240px; 
+   height: 125px; 
    }
+
+   .plaatjes_klein {
+      width: 240px; 
+      height: 125px; 
+      margin: 20px 10px 20px 10px; 
+      padding: 10px;
+      float: right;
+      }
 
 .deelkopje_nav {
    width: 240px; 
