--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ padding: 10px;
 
 .plaatjes_klein img {
    width: 240px; 
-   height: 125px; 
    }
 
    .plaatjes_klein {
@@ -100,7 +99,7 @@ padding: 10px;
       height: 125px; 
       margin: 20px 10px 20px 10px; 
       padding: 10px;
-      float: right;
+      float: left;
       }
 
 .deelkopje_nav {
