--- a/style.css
+++ b/style.css
@@ -97,8 +97,6 @@ padding: 10px;
    .plaatjes_klein {
       width: 240px; 
       height: 125px; 
-
-      padding: 10px;
       float: left;
       }
 
@@ -112,5 +110,6 @@ padding: 10px;
    color: #ffffff; 
    margin: 20px 20px 20px 10px; 
    padding: 10px;
+   float: left;
 }
    
