--- a/style.css
+++ b/style.css
@@ -92,13 +92,11 @@ padding: 10px;
 
 .plaatjes_klein img {
    width: 240px; 
+   float: left;
+   margin: 20px 10px 20px 10px; 
    }
 
-   .plaatjes_klein {
-      width: 240px; 
-      height: 125px; 
-      float: left;
-      }
+  
 
 .deelkopje_nav {
    width: 240px; 
