--- a/style.css
+++ b/style.css
@@ -94,7 +94,10 @@ padding: 10px;
    width: 240px; 
    float: left;
    margin: 20px 10px 20px 10px; 
+   box-sizing: border-box;
    }
+
+.clear   
 
 .deelkopje_nav {
    width: 240px; 
@@ -107,17 +110,18 @@ padding: 10px;
    margin: 0px 20px 20px 10px; 
    padding: 10px;
    float: left;
+   box-sizing: border-box;
 }
-   footer {
-clear: both;
-      width: 1000px; 
-height: 75px; 
-font-family: Bitter; 
-font-weight: 500; 
-font-size: p 17pt; 
-background-color: #3e9194; 
-color: #ffffff; 
-margin: 20px 10px 10px 10px; 
-padding: 10px;
-
+   
+footer {
+  clear: both;
+  width: 1000px; 
+  height: 75px; 
+  font-family: Bitter; 
+  font-weight: 500; 
+  font-size: p 17pt; 
+  background-color: #3e9194; 
+  color: #ffffff; 
+  margin: 20px 10px 10px 10px; 
+  padding: 10px;
    }
