--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ padding: 10px;
 #bigimage img {
    width: 1000px;
    margin: 20px 10px 20px 10px;
+   box-sizing: border-box;
  }
 
  .samenvatting_homepage {
@@ -109,11 +110,6 @@ padding: 10px;
    padding: 10px;
    float: left;
    box-sizing: border-box;
-}
-   
-.clearfix::after {
-   display: table;
-   clear: both;
 }
 
 footer {
