--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ padding: 10px;
    box-sizing: border-box;
    }
 
+   .clear {
+      clear: both; 
+   }
+
 .deelkopje_nav {
    width: 240px; 
    height: 187px; 
