--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -111,7 +111,7 @@ body {
    font-family: Bitter; 
    font-weight: 500; 
    font-size: p 17pt; 
-   background-color: #3e9194; 
+   background-color: #658B6F; 
    color: #ffffff; 
    margin: 20px 10px 10px 10px; 
    padding: 10px;
