--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ padding: 10px;
    text-align: center;
 }
 
+.inhoudsopgave a {
+   color: white;
+}
+
 #bigimage img {
    width: 1020px;
    margin: 20px 10px 20px 10px;
