--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -118,7 +118,7 @@ body {
  }
  
  #wrapper {
-    width: 1300px;
+    width: 1100px;
     margin: auto;
  }
 
@@ -212,4 +212,13 @@ body {
 
 td {
    border: 1px solid black;
+}
+
+.Preventietabel{
+   border: 1px solid black;
+   border-collapse: collapse;
+   margin: auto;
+   color:black;
+   font-size: 15pt;
+   text-align: center;
 }
