--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -121,7 +121,8 @@ body {
     width: 1100px;
     margin: auto;
  }
-
+ 
+/*Ik doe later de blokken voor het kopje Authenticatie, ik heb nu geen tijd, de rest is al gedaan*/
  .kop_samenvattingIntegriteit1 {
    width: 1000px; 
    height: 220px; 
@@ -147,7 +148,7 @@ body {
    padding: 10px;
    clear: both;
  }
-
+/*De Css voor beschikbaarheid werkt voor beschikbaarheid niet, ik kijk er later naar*/
  .kop_samenvattingBeschikbaarheid1 {
    width: 1000px; 
    height: 320px; 
