--- a/style.css
+++ b/style.css
@@ -192,3 +192,23 @@ footer {
    width: 1300px;
    margin: auto;
 }
+
+.deelkopje_navLaatste {
+   width: 326.5px; 
+   height: 187px; 
+   font-family: Bitter;
+   font-Weight: 500; 
+   font-size: 13pt; 
+   background-color: #658B6F; 
+   color: #ffffff; 
+   margin: 0px 10px 30px 10px; 
+   padding: 5px;
+   float: left;
+   box-sizing: border-box;
+}
+
+.deelkopje_navLaatste a {
+   text-decoration: none;
+   color: #ffffff;
+   font-weight: bold;
+}
