--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -506,6 +506,32 @@ td {
   background-color: #024565;
 }
 
+a {
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+nav a{
+  width: 1000px; 
+   height: 150px; 
+   font-family: Bitter;
+   font-weight: 500; 
+   font-size: 15pt; 
+   background-color: #3e9194; 
+   color: #ffffff; 
+   margin: 20px 10px 20px 10px; 
+   padding: 10px;
+}
+
+nav a:hover{
+color: white;
+}
+
 
 .Home {
   width: 90px;
