--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -505,3 +505,18 @@ td {
   font-weight: bold;
   background-color: #024565;
 }
+
+
+.Home {
+  width: 90px;
+  height: 50px;
+  background-color: #3e9194;
+  text-align: center;
+  float: right;
+}
+
+.Home a{
+color: #ffffff;
+text-decoration: none;
+font-size: 20px;
+}
