--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -545,4 +545,9 @@ color: white;
 color: #ffffff;
 text-decoration: none;
 font-size: 20px;
+font-weight: bold;
+}
+
+.Home a:hover {
+  text-decoration: underline;
 }
