--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ width: 1000px ;
 height: 100px ;
 font-family: Bitter ;
 font-weight: 600;
-font-size: H1 45pt;
+font-size: 18pt;
 background-color: #24565d;
 color: #ffffff;
 margin: 10px 10px 20px 10px;
@@ -189,7 +189,7 @@ footer {
   height: 75px; 
   font-family: Bitter; 
   font-weight: 500; 
-  font-size: p 17pt; 
+  font-size: 13pt; 
   background-color: #3e9194; 
   color: #ffffff; 
   margin: 0px 10px 10px 10px; 
