--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -424,6 +424,19 @@ body {
    clear: both;
  }
 
+ .kop_samenvattingRepressie_correctie_technieken3 {
+  width: 1000px; 
+  height: 80px; 
+  font-family: Bitter;
+  font-weight: 500; 
+  font-size: 15pt; 
+  background-color: #3e9194; 
+  color: #ffffff; 
+  margin: 20px 10px 20px 10px; 
+  padding: 10px;
+  clear: both;
+}
+
 
  table {
    border: 1px solid black;
