--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*Alle code is gevalideerd: https://jigsaw.w3.org/css-validator/validator */
+/*Alle code is gevalideerd: https://jigsaw.w3.org/css-validator/#validate_by_input */
 
 body {
    background-color:#f4f1de;     
