--- a/Zijpagina_style.css
+++ b/Zijpagina_style.css
@@ -69,6 +69,7 @@ body {
     width: 1100px;
     margin: auto;
  }
+
  .kop_samenvattingAuthenticatie1 {
   width: 1000px; 
   height: 220px; 
@@ -526,6 +527,12 @@ color: white;
    font-size: 13pt; 
    background-color: #3e9194; 
    color: #ffffff; 
-   margin: 20px 10px 20px 10px; 
    padding: 10px;
+   margin: 0 auto;
+}
+
+.binnen-wrapper {
+  text-align: center;
+  width: 1020px;
+  margin: 0px 10px 10px 10px; 
 }
